--- a/app/info.html
+++ b/app/info.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+            default-src 'self';
+            script-src 'self' 'unsafe-inline';
+            connect-src *
+          "
+    />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Wisdom Pet Medicine</title>
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body id="page-info">
   <main class="info-content">
