--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,11 @@
       </div>
     </div> <!-- Pet Ratings -->
   </div> <!-- Main -->
+  <script>
+    const eRequire = require;
+    const dirName = __dirname;
+    const dataLocation = require('path').resolve(__dirname, '..', 'data', 'data.json');
+  </script>
   <script src="js/render.js"></script>
 </body>
 </html>
